--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                                     </div>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link " href="contact.html">
+                                    <a class="nav-link" href="contact.html">
                                         <span>Contact</span>
                                     </a>
                                 </li>
@@ -647,8 +647,9 @@
                                 <h6>Quick Links</h6>
                                 <ul class="list-unstyled">
                                     <li><a href="index.html">Home</a></li>
+                                    <li><a href="about.html">About</a></li>
                                     <li><a href="">Products</a></li>
-                                    <li><a href="">Contact</a></li>
+                                    <li><a href="contact.html">Contact</a></li>
                                     <li><a href="">Download Brochure</a></li>
                                 </ul>
                             </div>
@@ -739,6 +740,87 @@
             $('[data-toggle="counter-up"]').counterUp({
                 delay: 10,
                 time: 1000
+            });
+
+            $(".banner-slider").slick({
+                infinite: true,
+                speed: 500,
+                autoplay: true,
+                autoplaySpeed: 4000,
+                slidesToShow: 1,
+                slidesToScroll: 1,
+                responsive: [
+                    {
+                        breakpoint: 992,
+                        settings: {
+                            arrows: false
+                        }
+                    }
+                ]
+            });
+
+            $(".product-slider").slick({
+                infinite: true,
+                speed: 500,
+                autoplay: false,
+                autoplaySpeed: 4000,
+                slidesToShow: 4,
+                slidesToScroll: 1,
+                responsive: [
+                    {
+                        breakpoint: 1199,
+                        settings: {
+                            slidesToShow: 3,
+                            slidesToScroll: 1
+                        }
+                    },
+                    {
+                        breakpoint: 991,
+                        settings: {
+                            slidesToShow: 2,
+                            slidesToScroll: 1
+                        }
+                    },
+                    {
+                        breakpoint: 767,
+                        settings: {
+                            slidesToShow: 1,
+                            slidesToScroll: 1
+                        }
+                    }
+                ]
+            });
+
+            $(".client-slider").slick({
+                infinite: true,
+                speed: 500,
+                autoplay: true,
+                autoplaySpeed: 4000,
+                slidesToShow: 6,
+                slidesToScroll: 1,
+                responsive: [
+                    {
+                        breakpoint: 992,
+                        settings: {
+                            slidesToShow: 3,
+                            slidesToScroll: 1
+                        }
+                    },
+                    {
+                        breakpoint: 767,
+                        settings: {
+                            slidesToShow: 2,
+                            slidesToScroll: 1
+                        }
+                    },
+                    {
+                        breakpoint: 575,
+                        settings: {
+                            slidesToShow: 1,
+                            slidesToScroll: 1
+                        }
+                    }
+                ]
             });
         </script>
     </body>
