--- a/about.html
+++ b/about.html
@@ -49,7 +49,12 @@
                                         <span>About</span>
                                     </a>
                                 </li>
-                                <li class="nav-item dropdown">
+                                <li class="nav-item">
+                                    <a class="nav-link" href="product.html">
+                                        <span>Products</span>
+                                    </a>
+                                </li>
+                                <!-- <li class="nav-item dropdown">
                                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown">
                                         <span>Products</span> <i class="fa fa-angle-down ml-2"></i>
                                     </a>
@@ -70,14 +75,14 @@
                                         <a class="dropdown-item" href="#">School Uniforms</a>
                                         <a class="dropdown-item" href="#">Uniform Sarees</a>
                                     </div>
-                                </li>
+                                </li> -->
                                 <li class="nav-item">
                                     <a class="nav-link" href="contact.html">
                                         <span>Contact</span>
                                     </a>
                                 </li>
                                 <li class="nav-item nav-btn">
-                                    <button class="btn btn-primary btn-download">Download Brochure</button>
+                                    <a href="img/broucher.jpg" class="btn btn-primary btn-download" download>Download Brochure</a>
                                 </li>
                             </ul>
                         </div>
@@ -134,9 +139,9 @@
                                 <ul class="list-unstyled">
                                     <li><a href="index.html">Home</a></li>
                                     <li><a href="about.html">About</a></li>
-                                    <li><a href="">Products</a></li>
+                                    <li><a href="product.html">Products</a></li>
                                     <li><a href="contact.html">Contact</a></li>
-                                    <li><a href="">Download Brochure</a></li>
+                                    <li><a href="img/broucher.jpg" download>Download Brochure</a></li>
                                 </ul>
                             </div>
                             <!-- <div class="col-md-6 col-lg-3 footer-links">
